<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/register_text"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_FirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="2">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_LastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_Phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_date_of_birth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="10"
                        android:inputType="number"
                        android:hint="@string/string_date_of_birth"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:inputType="text"
                    android:hint="@string/string_bio"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btn_register"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="16dp"
                android:text="@string/continue_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Button>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>